# Spotka-app

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  setup_spotka_final.sh
.github/workflows/: build-android.yml  build-ios.yml  security-audit.yml
assets/dicts/: lang_en.json  lang_eo.json  lang_pl.json
assets/lang/: en.json  eo.json  pl.json
mobile/android/: build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/spotka/: MainActivity.kt
mobile/ios/Spotka/: AppDelegate.swift  Info.plist  SceneDelegate.swift  Spotka-Bridging-Header.h
mobile/rust-core/: Cargo.toml  app_controller.rs  build.rs  lib.rs  main.rs
mobile/rust-core/chain/: block.rs  consensus.rs  merkle.rs  mod.rs  transaction.rs
mobile/rust-core/src/: app_controller.rs  lib.rs  main.rs
mobile/rust-core/src/chain/: block.rs  consensus.rs  merkle.rs  mod.rs  transaction.rs
mobile/rust-core/src/crypto/: e2ee.rs  identity.rs  mod.rs  secure_storage.rs
mobile/rust-core/src/db/: manager.rs  mod.rs  schema.rs
mobile/rust-core/src/dict/: compressor.rs  cts_parser.rs  loader.rs  mod.rs
mobile/rust-core/src/ffi/: android.rs  ios.rs  mod.rs
mobile/rust-core/src/i18n/: mod.rs
mobile/rust-core/src/meetings/: manager.rs  mod.rs
mobile/rust-core/src/p2p/: behaviour.rs  discovery.rs  mod.rs  protocol.rs  sync.rs  transport.rs
mobile/rust-core/src/ping/: mod.rs  protocol.rs  qr_handler.rs
mobile/rust-core/src/ui/: create_meeting.slint  events_view.slint  help.slint  main_window.slint  meetings_details.slint  meetings_list.slint  meetings_map.rs  meetings_map.slint  meetings_view.slint  mod.rs  ping.slint  relations.slint  settings.slint
mobile/rust-core/src/ui/components/: meeting_card.slint  meeting_details.slint  mod.rs  nav_bar.slint  tag_badge.slint  user_card.slint
scripts/: build-alpha.sh  build-android.sh  build-ios.sh  setup_dev.sh
spotka_app/: README.md  pubspec.yaml
spotka_app/lib/: main.dart
spotka_app/lib/core/crypto/: crypto_manager.dart
spotka_app/lib/core/database/: database.dart
spotka_app/lib/core/p2p/: p2p_manager.dart
spotka_app/lib/shared/: theme.dart
tools/spotka-sim/: Cargo.toml
tools/spotka-sim/src/: main.rs
