[package]
name = "spotka-core"
version = "0.1.0-alpha"
edition = "2021"

[lib]
name = "spotka_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
slint = "1.5"
drift = { version = "2.16", features = ["sqlcipher", "macros"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
aes-gcm = "0.10"
sha2 = "0.10"
blake3 = "1.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
rand = "0.8"
argon2 = "0.5"
zeroize = "1.7"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9"
