[package]
name = "spotka-core"
version = "0.1.0-alpha"
edition = "2024" # Updated to Rust 2024 Edition (Current Standard in 2026)
description = "Spotka: An anti-social meetup planner. No chats, no feeds, no likes. Purely for organizing physical meetings, even for just two people."
license = "AGPL-3.0"
authors = ["Spotka Team"]
repository = "https://github.com/spotka-app/spotka"
keywords = ["p2p", "meetup", "privacy", "offline-first", "anti-social"]
categories = ["network-programming", "cryptography"]

[lib]
name = "spotka_core"
# 'cdylib' for Android/iOS FFI, 'staticlib' for iOS static linking, 'rlib' for testing
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# --- UI Framework (Reductive Functionalism) ---
# Minimalist UI engine generating native code, no external assets
slint = "1.9" 

# --- Database & Persistence (Drift + SQLCipher) ---
# Encrypted local storage for offline-first architecture
drift = { version = "2.20", features = ["sqlcipher", "macros"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

# --- Cryptography (Zero-Knowledge & E2EE) ---
# Identity (Ed25519), Key Exchange (X25519), Payload Encryption (AES-GCM)
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
x25519-dalek = { version = "2.1", features = ["reusable_secrets"] }
aes-gcm = "0.11"
sha2 = "0.11"
blake3 = "1.6" # Fast hashing for App-Chain integrity
argon2 = "0.6" # Key derivation from phone number/secret
rand = "0.9"
zeroize = "1.8" # Secure memory wiping
hex = "0.4"

# --- Networking & P2P (Decentralization) ---
# Async runtime and libp2p stack for serverless communication
tokio = { version = "1.40", features = ["full", "sync", "time", "rt-multi-thread"] }
libp2p = { version = "0.55", features = ["tcp", "noise", "yamux", "mdns", "quic", "dns", "gossipsub"] }
quinn = "0.11" # QUIC transport for low-latency P2P
async-trait = "0.1"

# --- Serialization & Utils ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3" # Compact binary serialization for P2P payloads
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1.20"
thiserror = "2.0"

# --- Platform Specifics (FFI Bridges) ---
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
android_logger = "0.14"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.10"
objc = "0.2"

[build-dependencies]
slint-build = "1.9" # Compiles .slint files into Rust code during build

# --- Release Profile Optimization (Max Performance & Min Size) ---
# Critical for mobile battery life and binary size
[profile.release]
opt-level = 3      # Maximum optimization
lto = true         # Link Time Optimization (cross-crate)
codegen-units = 1  # Single codegen unit for better optimization
strip = true       # Remove debug symbols to reduce size
panic = "abort"    # Smaller binary footprint on panic (no unwind tables)
