[package]
name = "spotka-core"
version = "0.1.0-alpha"
edition = "2024" # Updated to 2024 as per 2026 timeline
description = "Spotka: Anti-social P2P Meetup Planner (No chats, no feeds, just physical meetups)"
license = "AGPL-3.0"
authors = ["Spotka Team"]

[lib]
name = "spotka_core"
# cdylib for Android/iOS FFI, staticlib for iOS static linking, rlib for tests/desktop
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# --- UI Framework (Reductive Functionalism: B&W only) ---
slint = "1.6"

# --- Database & Persistence (Drift + SQLCipher for E2EE local storage) ---
drift = { version = "2.16", features = ["sqlcipher", "macros"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# --- Cryptography (Identity based on Phone Hash, Ed25519/X25519) ---
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["reusable_secrets"] }
aes-gcm = "0.10"
sha2 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.7"
hex = "0.4"

# --- Networking (P2P via libp2p, QUIC, mDNS/BLE) ---
tokio = { version = "1", features = ["full", "sync", "time", "rt-multi-thread"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "mdns", "quic", "dns", "gossipsub"] }
quinn = "0.10"
async-trait = "0.1"

# --- Serialization & Utils ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
once_cell = "1.19"
thiserror = "1.0"

# --- Platform FFI ---
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9"
objc = "0.2"

[build-dependencies]
slint-build = "1.6"

# --- Optimization for Mobile (Small binary, fast execution) ---
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
