[package]
name = "spotka-sim"
version = "0.1.0"
edition = "2021"
description = "Network simulator for Spotka P2P protocol - Sybil attack resistance testing"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
petgraph = "0.6"
ed25519-dalek = "2"
x25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
